--- a/src/styles.css
+++ b/src/styles.css
@@ -5,28 +5,29 @@
 nav {
     display: flex;
     justify-content: space-between;
+    width: 100%;
     align-items: center;
     background-color: rgb(255, 174, 174);
     padding: 0px 20px;
 }
 
 nav h2 {
-    color: #fff; /* White text for the title */
+    color: #fff; 
     font-size: x-large;
     font-weight: 500;
 }
 
 
 nav a {
-    text-decoration: none; /* Remove underline from links */
-    color: #fff; /* White text color */
+    text-decoration: none; 
+    color: #fff; 
     padding: 5px 10px;
     font-size: 18px;
 }
 
 nav a:hover {
-    background-color: #e5a3ff; /* Slightly darker green on hover */
-    border-radius: 5px; /* Rounded corners on hover */
+    background-color: #d195e4; 
+    border-radius: 5px; 
 }
 
 /*************HOME PAGE*************/
@@ -36,7 +37,9 @@ nav a:hover {
 
 /* Full height background color */
 body {
-    background-color: #f0f0f0;
+    
+    flex-direction: column;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,10 +47,14 @@ body {
 
 /* Styling the form container */
 form {
-    background-color: #fff;
-    padding: 20px 30px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 40px;
+    background-color: #b1b1b1;
+    padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     width: 300px;
 }
 
@@ -59,7 +66,7 @@ form label {
 }
 
 /* Input field styling */
-email {
+form input {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
@@ -70,10 +77,12 @@ email {
 
 /* Button styling */
 form button {
-    width: 100%;
+    display: flex;
+    width: 40%;
+    justify-content: center;
     padding: 10px;
-    background-color: #93cff1; /* Green background */
-    color: #fff; /* White text */
+    background-color: #93cff1; 
+    color: #fff; 
     border: none;
     border-radius: 5px;
     font-size: 16px;
@@ -82,5 +91,5 @@ form button {
 
 /* Button hover effect */
 form button:hover {
-    background-color: #45a049; /* Slightly darker green on hover */
+    background-color: #4b8697; 
 }
